# nlp-core

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GUIDE.TEST.md  GUIDE.md  INSTALL.DOCKER.md  INSTALL.MACOS.md  INSTALL.UBUNTU.md  LOCAL.README.md  LOCAL.TEST.md  SPEC.md  TEST_GUIDE.md  TODO.md
scripts/: benchmark.py  check_imports.py
src/bpmg_korean_nlp/: __init__.py  enums.py  exceptions.py  jamo_utils.py  mecab_check.py  models.py  normalizer.py  pii.py  query_analyzer.py  spacing.py  stopwords.py  tokenizer.py
tests/: conftest.py  test_golden.py  test_jamo_utils.py  test_mecab_check.py  test_mecab_check_mocked.py  test_models.py  test_normalizer.py  test_pii.py  test_query_analyzer.py  test_spacing.py  test_spacing_mocked.py  test_stopwords.py  test_tokenizer.py  test_tokenizer_mocked.py
tests/fixtures/: golden.jsonl
